--- a/changelog
+++ b/changelog
@@ -1,1 +1,2 @@
-* bump TOC
+* fix flashing in incorrect location before moving (legion)
+* fix frame moves with mouse off unit before hiding (legion)
